--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,112 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>tee's website</title>
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>			
-        <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/assets/css/animate.css">
-		<link rel="stylesheet" href="/assets/css/about/style.css">
-		<link rel="stylesheet" href="/assets/css/style.css">
-        <link rel="shortcut icon" href="/assets/imgs/favicon.png">
-    </head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>tee's website</title>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/assets/css/animate.css">
+	<link rel="stylesheet" href="/assets/css/about/style.css">
+	<link rel="stylesheet" href="/assets/css/style.css">
+	<link rel="shortcut icon" href="/assets/imgs/favicon.png">
+</head>
 
-    <body>
-    	<nav class="navbar navbar-inverse navbar-fixed-top navbar-no-bg" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="/">Tee</a>
-					<link rel="home" href="/" />
-				</div>
-				<div class="collapse navbar-collapse" id="top-navbar-1">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a class="btn btn-link-3" href="/">Home</a></li>
-                        <li><a class="btn btn-link-3" href="/about">About</a></li>
-						<li><a class="btn btn-link-3" href="/projects">Projects</a></li>
-                        <li><a class="btn btn-link-3" href="/discord">Discord</a></li>
-						<li><a class="btn btn-link-3" href="/pages">Pages</a></li>
-                        <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
-					</ul>
-				</div>
+<body>
+	<nav class="navbar navbar-inverse navbar-fixed-top navbar-no-bg" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+					data-target="#top-navbar-1">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="/">Tee</a>
+				<link rel="home" href="/" />
 			</div>
-		</nav>
-        
+			<div class="collapse navbar-collapse" id="top-navbar-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a class="btn btn-link-3" href="/">Home</a></li>
+					<li><a class="btn btn-link-3" href="/about">About</a></li>
+					<li><a class="btn btn-link-3" href="/projects">Projects</a></li>
+					<li><a class="btn btn-link-3" href="/discord">Discord</a></li>
+					<li><a class="btn btn-link-3" href="/pages">Pages</a></li>
+					<li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	
 
 <main>
-    		<link rel="stylesheet" href="/assets/css/about/style.css">
-		<main>
-			<div class="about">
-				<div>
-					<body>
-						<div class="content">
-							<h1>Hiya, Call me Tee!</h1>
-							<iframe width="570" height="230" src="https://lanyard.cnrad.dev/api/1050531216589332581" frameborder="0" allowfullscreen style="margin-left: 35px;"></iframe>
-							<div id="images">
-								<a href="https://discord.com/users/1050531216589332581" target="_blank"><img src="/assets/imgs/discord.png" class="social-logo" alt="Discord"></a>
-								<a href="https://github.com/tayrp" target="_blank"><img src="/assets/imgs/github.png" class="social-logo" alt="Github"></a>
-								<a href="https://discord.gg/gjypyNkPPp" target="_blank"><img src="/assets/imgs/haven.png" class="social-logo" alt="Haven"></a>
-								<a href="https://www.last.fm/user/MystixMew" target="_blank"><img src="/assets/imgs/lastfm.png" class="social-logo" alt="Last.fm"></a>
-								<a href="https://www.youtube.com/@MystixMew" target="_blank"><img src="/assets/imgs/youtube.png" class="social-logo" alt="YouTube"></a>
-								<!-- <a class="btn btn-link-3" button id="aboutpauseBtn" onclick="togglePause()">⏸️</a></p> -->
-							</div>
-						</div>
-						<video autoplay loop id="aboutvideo">
-							<source src="https://index.havenmc.org/website/assets/mp4/fightsong.mp4" type="video/mp4">
-							This browser does not support HTML5 video or the server is offline.
-						</video>
-						
-						<label for="volumeControl">Volume:</label>
-						<input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.01">
-						<span id="volumePercentage">1%</span>										
-			
-						<script>
-							var video = document.getElementById("aboutvideo");
-							var btn = document.getElementById("aboutpauseBtn");
-							var volumeControl = document.getElementById("volumeControl");
-							var volumePercentage = document.getElementById("volumePercentage");
+    <link rel="stylesheet" href="/assets/css/about/style.css">
+<main>
+	<div class="about">
+		<div>
 
-						// Initialize the video volume and percentage display
-							video.volume = volumeControl.value; // Set initial volume based on the slider value
-							volumePercentage.innerHTML = Math.round(volumeControl.value * 100) + "%"; // Set initial percentage
-
-							function togglePause() {
-							    if (video.paused) {
-        							video.play();
-        							btn.innerHTML = "⏸️";
-    							} else {
-        							video.pause();
-        							btn.innerHTML = "▶️";
-    							}
-							}
-
-							volumeControl.addEventListener("input", function() {
-    							video.volume = volumeControl.value;
-    							var percentage = Math.round(volumeControl.value * 100);
-    							volumePercentage.innerHTML = percentage + "%";
-							});
-						</script>
-					</body>
+			<body>
+				<div class="content">
+					<h1>Hiya, Call me Tee!</h1>
+					<iframe width="570" height="230" src="https://lanyard.cnrad.dev/api/1050531216589332581"
+						frameborder="0" allowfullscreen style="margin-left: 35px;"></iframe>
+					<div id="images">
+						<a href="https://discord.com/users/1050531216589332581" target="_blank"><img
+								src="/assets/imgs/discord.png" class="social-logo" alt="Discord"></a>
+						<a href="https://github.com/tayrp" target="_blank"><img src="/assets/imgs/github.png"
+								class="social-logo" alt="Github"></a>
+						<a href="https://discord.gg/gjypyNkPPp" target="_blank"><img src="/assets/imgs/haven.png"
+								class="social-logo" alt="Haven"></a>
+						<a href="https://www.last.fm/user/MystixMew" target="_blank"><img src="/assets/imgs/lastfm.png"
+								class="social-logo" alt="Last.fm"></a>
+						<a href="https://www.youtube.com/@MystixMew" target="_blank"><img src="/assets/imgs/youtube.png"
+								class="social-logo" alt="YouTube"></a>
+						<!-- <a class="btn btn-link-3" button id="aboutpauseBtn" onclick="togglePause()">⏸️</a></p> -->
+					</div>
 				</div>
-			</div>	
-		</main>
+				<video autoplay loop id="aboutvideo">
+					<source src="https://index.havenmc.org/website/assets/mp4/fightsong.mp4" type="video/mp4">
+					This browser does not support HTML5 video or the server is offline.
+				</video>
+
+				<label for="volumeControl">Volume:</label>
+				<input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.01">
+				<span id="volumePercentage">1%</span>
+
+				<script>
+					var video = document.getElementById("aboutvideo");
+					var btn = document.getElementById("aboutpauseBtn");
+					var volumeControl = document.getElementById("volumeControl");
+					var volumePercentage = document.getElementById("volumePercentage");
+
+					// Initialize the video volume and percentage display
+					video.volume = volumeControl.value; // Set initial volume based on the slider value
+					volumePercentage.innerHTML = Math.round(volumeControl.value * 100) + "%"; // Set initial percentage
+
+					function togglePause() {
+						if (video.paused) {
+							video.play();
+							btn.innerHTML = "⏸️";
+						} else {
+							video.pause();
+							btn.innerHTML = "▶️";
+						}
+					}
+
+					volumeControl.addEventListener("input", function () {
+						video.volume = volumeControl.value;
+						var percentage = Math.round(volumeControl.value * 100);
+						volumePercentage.innerHTML = percentage + "%";
+					});
+				</script>
+			</body>
+		</div>
+	</div>
+</main>
 </main>
 
-        <footer>
-	        <div class="container">
-	        	<div class="row">
-                    	&copy; <b>2024 
-							<a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>. All rights reserved.</b>
-                </div>
-	        </div>
-        </footer>
+	<footer>
+		<div class="container">
+			<div class="row">
+				&copy; <b>2024
+					<a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>. All rights reserved.</b>
+			</div>
+		</div>
+	</footer>
