--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>tee's website</title>
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>			
-        <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/assets/css/animate.css">
-		<link rel="stylesheet" href="/assets/css/about/style.css">
-		<link rel="stylesheet" href="/assets/css/style.css">
-        <link rel="shortcut icon" href="/assets/imgs/favicon.png">
-    </head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>tee's website</title>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/assets/css/animate.css">
+	<link rel="stylesheet" href="/assets/css/about/style.css">
+	<link rel="stylesheet" href="/assets/css/style.css">
+	<link rel="shortcut icon" href="/assets/imgs/favicon.png">
+</head>
 
-    <body>
-    	<nav class="navbar navbar-inverse navbar-fixed-top navbar-no-bg" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="/">Tee</a>
-					<link rel="home" href="/" />
-				</div>
-				<div class="collapse navbar-collapse" id="top-navbar-1">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a class="btn btn-link-3" href="/">Home</a></li>
-                        <li><a class="btn btn-link-3" href="/about">About</a></li>
-						<li><a class="btn btn-link-3" href="/projects">Projects</a></li>
-                        <li><a class="btn btn-link-3" href="/discord">Discord</a></li>
-						<li><a class="btn btn-link-3" href="/pages">Pages</a></li>
-                        <li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
-					</ul>
-				</div>
+<body>
+	<nav class="navbar navbar-inverse navbar-fixed-top navbar-no-bg" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+					data-target="#top-navbar-1">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="/">Tee</a>
+				<link rel="home" href="/" />
 			</div>
-		</nav>
-        
+			<div class="collapse navbar-collapse" id="top-navbar-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a class="btn btn-link-3" href="/">Home</a></li>
+					<li><a class="btn btn-link-3" href="/about">About</a></li>
+					<li><a class="btn btn-link-3" href="/projects">Projects</a></li>
+					<li><a class="btn btn-link-3" href="/discord">Discord</a></li>
+					<li><a class="btn btn-link-3" href="/pages">Pages</a></li>
+					<li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	
 
 <main>
     <div>
@@ -61,11 +62,11 @@
 </div>
 </main>
 
-        <footer>
-	        <div class="container">
-	        	<div class="row">
-                    	&copy; <b>2024 
-							<a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>. All rights reserved.</b>
-                </div>
-	        </div>
-        </footer>
+	<footer>
+		<div class="container">
+			<div class="row">
+				&copy; <b>2024
+					<a href="https://github.com/tayrp/tayrp.github.io">TayRP</a>. All rights reserved.</b>
+			</div>
+		</div>
+	</footer>
