--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -27,7 +27,11 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Tee</a>
+				<a class="navbar-brand" href="/">
+					Tee
+					<img id="dcstat" alt="Status" width="75" style="margin-left: 55px; margin-top: -17px">
+					<script src="/assets/js/lanyard.js"></script>
+				</a>
 				<link rel="home" href="/" />
 			</div>
 			<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -38,7 +42,6 @@
 					<li><a class="btn btn-link-3" href="/discord">Discord</a></li>
 					<li><a class="btn btn-link-3" href="/pages">Pages</a></li>
 					<li><a class="btn btn-link-3" href="https://tayrp.substack.com/">Blog</a></li>
-					<script src="/assets/js/lanyard.js"></script>
 				</ul>
 			</div>
 		</div>
