--- a/public/about/index.html
+++ b/public/about/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="/assets/css/about/style.css">
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<link rel="shortcut icon" href="/assets/imgs/favicon.png">
+	<script src="assets/js/disableFullscreen.js"></script>
 </head>
 
 <body>
@@ -53,13 +54,12 @@
 <main>
 	<div class="about">
 		<div>
-
 			<body>
 				<div class="content">
 					<h1>Hiya, Call me Tee!</h1>
-					<iframe width="570" height="210" src="https://lanyard.cnrad.dev/api/1050531216589332581"
-						frameborder="0" allowfullscreen style="margin-left: 35px;"></iframe>
-						<h4>Someone told me I had shit taste in music when I showed them this song, so I put it on my website, Fuck you.</h4>
+					<iframe width="570" height="212" src="https://lanyard.cnrad.dev/api/1050531216589332581"
+						frameborder="0" allowfullscreen="false" style="margin-left: 35px;"></iframe>
+						<!-- <h4>Someone told me I had shit taste in music when I showed them this song, so I put it on my website, Fuck you.</h4> -->
 					<div id="images">
 						<a href="https://discord.com/users/1050531216589332581" target="_blank"><img
 								src="/assets/imgs/discord.png" class="social-logo" alt="Discord"></a>
@@ -80,8 +80,9 @@
 				</video>
 
 				<label for="volumeControl">Volume:</label>
-				<input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.01">
+				<input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.25">
 				<span id="volumePercentage">1%</span>
+				<a class="btn btn-link-3" button id="aboutpauseBtn" onclick="togglePause()">⏸️</a></p>
 
 				<script>
 					var video = document.getElementById("aboutvideo");
