--- a/public/discord/index.html
+++ b/public/discord/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/assets/css/animate.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/about/style.css" />
-    <link rel="shortcut icon" href="/assets/imgs/favicon.png" />
+    <link rel="shortcut icon" href="https://api.lanyard.rest/1050531216589332581.jpg" />
     <script src="assets/js/disableFullscreen.js"></script>
   </head>
 
